--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                         <input type="tel" name="Telefono" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-600 outline-none" required>
                     </div>
                     <div>
+                        <label class="block text-sm font-bold text-gray-700 mb-1">Indirizzo Email *</label>
+                        <input type="email" name="Email" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-600 outline-none" placeholder="esempio@mail.com" required>
+                    </div>
+                    <div>
                         <label class="block text-sm font-bold text-gray-700 mb-1">Cosa ti interessa?</label>
                         <select name="Interesse" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-600 outline-none">
                             <option>Casa (Salvaspazio / Sottozoccolo)</option>
