--- a/index.html
+++ b/index.html
@@ -171,6 +171,31 @@
                     <li>• Fredda e frizzante nascosta</li>
                 </ul>
             </div>
+            
+            <!-- CARD 8: T40 TOTEM -->
+            <div class="bg-white rounded-3xl shadow-xl border border-slate-100 p-6 hover:border-cyan-400 transition">
+                <div class="h-48 flex items-center justify-center mb-4"><img src="t40-totem.jpg" class="max-h-full" alt="T40 Totem" onerror="this.src='https://placehold.co/400x300/e2e8f0/475569?text=T40+Totem'"></div>
+                <h3 class="text-xl font-bold">T40 TOTEM</h3>
+                <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Erogatore a Colonna</p>
+                <ul class="text-sm space-y-2 text-slate-600">
+                    <li>• Capacità raffreddamento: 40 L/h</li>
+                    <li>• Erogazione in continuo: 6 Litri</li>
+                    <li>• Temperatura acqua fredda: tra 5° e 12°</li>
+                    <li>• Pompa carbonazione booster 220V</li>
+                </ul>
+            </div>
+
+             <!-- CARD 9: TOTEM BOLLICINA -->
+            <div class="bg-white rounded-3xl shadow-xl border border-slate-100 p-6 hover:border-cyan-400 transition">
+                <div class="h-48 flex items-center justify-center mb-4"><img src="totem-bollicina.jpg" class="max-h-full" alt="Totem Bollicina" onerror="this.src='https://placehold.co/400x300/e2e8f0/475569?text=Totem+Bollicina'"></div>
+                <h3 class="text-xl font-bold">TOTEM BOLLICINA</h3>
+                <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Design Bianco Slim</p>
+                <ul class="text-sm space-y-2 text-slate-600">
+                    <li>• Capacità raffreddamento: 25 L/h</li>
+                    <li>• Erogazione in continuo: 2 Litri</li>
+                    <li>• Dimensioni: 20 x 134 x 55 cm</li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -192,6 +217,8 @@
                     <option value="Thanta">Linea Thanta (Ufficio/Ristorazione)</option>
                     <option value="Osmoslim">Osmoslim</option>
                     <option value="Frighost">Frighost</option>
+                    <option value="T40 Totem">T40 Totem</option>
+                    <option value="Totem Bollicina">Totem Bollicina</option>
                 </select>
                 <button type="submit" class="w-full bg-cyan-500 text-white py-4 rounded-xl font-bold text-lg hover:bg-cyan-600 transition shadow-lg transform hover:-translate-y-1">
                     RICHIEDI IL TUO PREVENTIVO GRATUITO
