--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             L'acqua pura a flusso diretto. <br><span class="text-cyan-500">Massima resa, minimo ingombro.</span>
         </h1>
         <p class="text-lg text-slate-600 mb-8 max-w-3xl mx-auto">
-            Tecnologia Made in Italy certificata dal Ministero della Salute. Soluzioni di design invisibili per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
+            Tecnologia Made in Italy certificata. Soluzioni di design invisibili per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
         </p>
         <a href="#form" class="bg-slate-800 text-white px-10 py-4 rounded-xl font-bold shadow-2xl hover:bg-slate-700 transition inline-block">Configura il tuo impianto</a>
     </header>
