--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             L'acqua pura a flusso diretto. <br><span class="text-cyan-500">Massima resa, minimo ingombro.</span>
         </h1>
         <p class="text-lg text-slate-600 mb-8 max-w-3xl mx-auto">
-            Tecnologia Made in Italy certificata. Soluzioni di design invisibili per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
+            Tecnologia Made in Italy certificata. Soluzioni di design per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
         </p>
         <a href="#form" class="bg-slate-800 text-white px-10 py-4 rounded-xl font-bold shadow-2xl hover:bg-slate-700 transition inline-block">Configura il tuo impianto</a>
     </header>
 
     <section id="vantaggi" class="py-16 px-6 max-w-5xl mx-auto text-slate-700">
-        <h2 class="text-3xl md:text-4xl font-extrabold text-center text-slate-800 mb-4">Analisi Tecnica e Finanziaria</h2>
-        <p class="text-center text-lg text-cyan-700 font-medium mb-12 max-w-3xl mx-auto">Di seguito l'analisi tecnica e finanziaria basata su una famiglia media di 3-4 persone (consumo stimato: 2.200 - 2.500 litri/anno).</p>
+        <h2 class="text-3xl md:text-4xl font-extrabold text-center text-slate-800 mb-4">Analisi tecnica e finanziaria</h2>
+        <p class="text-center text-lg text-cyan-700 font-medium mb-12 max-w-3xl mx-auto">Basata su una famiglia media di 3-4 persone (consumo stimato: 2.200 - 2.500 litri/anno).</p>
         
         <div class="bg-white p-8 md:p-10 rounded-3xl shadow-lg border border-slate-100 mb-10">
-            <h3 class="text-2xl font-bold text-cyan-600 mb-4">1. L’Analisi del "Costo dell’Inefficienza"</h3>
+            <h3 class="text-2xl font-bold text-cyan-600 mb-4">1. Costo dell’inefficienza</h3>
             <p class="mb-5 text-lg">Molte famiglie considerano l’acqua al supermercato un "piccolo costo". In realtà, è una passività finanziaria e logistica.<br>Se guardiamo i numeri, una famiglia di 4 persone consuma circa <strong>1.600 bottiglie da 1,5L all'anno</strong>. Questo significa:</p>
             <ul class="space-y-4 text-lg">
                 <li class="flex items-start"><span class="text-cyan-500 font-bold mr-3 text-xl">🏋️</span> <div><strong>Peso:</strong> 2,5 tonnellate di plastica e acqua trasportate a mano dal market a casa.</div></li>
@@ -54,26 +54,26 @@
         </div>
 
         <div class="bg-white p-8 md:p-10 rounded-3xl shadow-lg border border-slate-100 mb-10 overflow-hidden">
-            <h3 class="text-2xl font-bold text-cyan-600 mb-4">2. Business Case: Bottiglia vs. Filtrazione Premium</h3>
+            <h3 class="text-2xl font-bold text-cyan-600 mb-4">2. Business case: bottiglia vs. filtrazione premium</h3>
             <p class="mb-6 text-lg">Ecco la comparazione economica su un orizzonte temporale di 5 anni. Consideriamo un impianto di filtrazione/frigogasatura di fascia alta con manutenzione inclusa.</p>
             
             <div class="overflow-x-auto rounded-xl border border-slate-200 mb-8">
                 <table class="w-full text-left border-collapse min-w-max">
                     <thead>
                         <tr class="bg-cyan-50 text-slate-800 text-lg">
-                            <th class="p-4 border-b border-slate-200">Voce di Costo</th>
-                            <th class="p-4 border-b border-slate-200">Acqua in Bottiglia (Media)</th>
-                            <th class="p-4 border-b border-slate-200 text-cyan-700">Sistema Premium</th>
+                            <th class="p-4 border-b border-slate-200">Voce di costo</th>
+                            <th class="p-4 border-b border-slate-200">Acqua in bottiglia (Media)</th>
+                            <th class="p-4 border-b border-slate-200 text-cyan-700">Sistema premium</th>
                         </tr>
                     </thead>
                     <tbody class="text-base">
                         <tr class="border-b border-slate-100 hover:bg-slate-50">
-                            <td class="p-4 font-semibold">Costo Litro (medio)</td>
+                            <td class="p-4 font-semibold">Costo litro (medio)</td>
                             <td class="p-4">€ 0,28 / L</td>
                             <td class="p-4">€ 0,002 / L (Acqua di rete)</td>
                         </tr>
                         <tr class="border-b border-slate-100 hover:bg-slate-50">
-                            <td class="p-4 font-semibold">Spesa Annuale Acqua</td>
+                            <td class="p-4 font-semibold">Spesa annuale acqua</td>
                             <td class="p-4">€ 700,00</td>
                             <td class="p-4">€ 5,00</td>
                         </tr>
@@ -83,7 +83,7 @@
                             <td class="p-4">€ 180,00 (Media annua)</td>
                         </tr>
                         <tr class="border-b border-slate-100 hover:bg-slate-50">
-                            <td class="p-4 font-semibold">Ammortamento Macchina</td>
+                            <td class="p-4 font-semibold">Ammortamento macchina</td>
                             <td class="p-4">€ 0,00</td>
                             <td class="p-4">€ 300,00 (Esempio su 5 anni)</td>
                         </tr>
