--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="logo.png" alt="Green Water Italia" class="h-32 md:h-48 object-contain drop-shadow-xl" onerror="this.style.display='none'">
         </div>
         <h1 class="text-4xl md:text-5xl font-extrabold mb-6 leading-tight text-slate-800">
-            L'acqua pura a flusso diretto. <br><span class="text-cyan-500">Massima resa, minimo ingombro.</span>
+            La tua sorgente privata, ogni giorno a casa tua. <br><span class="text-cyan-500">Massima resa, minimo ingombro.</span>
         </h1>
         <p class="text-lg text-slate-600 mb-8 max-w-3xl mx-auto">
             Tecnologia Made in Italy certificata. Soluzioni di design per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
