--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
         <div class="grid md:grid-cols-3 gap-6 mb-10">
             <div class="bg-white p-6 rounded-3xl shadow-lg border border-slate-100">
                 <div class="text-4xl mb-4">🌿</div>
-                <h4 class="font-bold text-xl text-slate-800 mb-3">Sostenibilità Reale</h4>
-                <p class="text-slate-600 mb-2"><strong>(Zero Greenwashing)</strong></p>
+                <h4 class="font-bold text-xl text-slate-800 mb-3">Sostenibilità reale</h4>
+                <p class="text-slate-600 mb-2"><strong>(Zero greenwashing)</strong></p>
                 <p class="text-slate-600">Una famiglia di 4 persone genera circa 50-60 kg di plastica PET all'anno. Anche se riciclata, la produzione e il trasporto di quella plastica hanno un'impronta carbonica massiccia. Con un impianto, riduci il tuo impatto ambientale del 98% istantaneamente.</p>
             </div>
             <div class="bg-white p-6 rounded-3xl shadow-lg border border-slate-100">
                 <div class="text-4xl mb-4">⏳</div>
-                <h4 class="font-bold text-xl text-slate-800 mb-3">Guadagno di Tempo e Comfort</h4>
+                <h4 class="font-bold text-xl text-slate-800 mb-3">Guadagno di tempo e comfort</h4>
                 <p class="text-slate-600 mb-3">Immagina di non dover mai più:</p>
                 <ul class="text-slate-600 list-disc pl-5 mb-3 space-y-1">
                     <li>Controllare se l'acqua sta finendo.</li>
@@ -128,14 +128,14 @@
             </div>
             <div class="bg-white p-6 rounded-3xl shadow-lg border border-slate-100">
                 <div class="text-4xl mb-4">🛡️</div>
-                <h4 class="font-bold text-xl text-slate-800 mb-3">Sicurezza e Salute Continua</h4>
+                <h4 class="font-bold text-xl text-slate-800 mb-3">Sicurezza e salute continua</h4>
                 <p class="text-slate-600">L'acqua delle bottiglie di plastica può restare mesi sotto il sole nei piazzali dei logistici o nei container, con rischio di migrazione di microplastiche. L'acqua microfiltrata è acqua viva, trattata al momento, priva di cloro, metalli pesanti e sapori sgradevoli, ma ricca dei sali minerali necessari al corpo.</p>
             </div>
         </div>
 
         <div class="text-center bg-slate-800 text-white p-10 rounded-3xl shadow-2xl relative overflow-hidden">
             <div class="absolute -right-10 -top-10 text-cyan-500 opacity-20 text-9xl">💡</div>
-            <h3 class="text-3xl font-black text-cyan-400 mb-4 relative z-10">Conclusione: Il ROI del Benessere</h3>
+            <h3 class="text-3xl font-black text-cyan-400 mb-4 relative z-10">Il ROI del benessere</h3>
             <p class="text-xl leading-relaxed relative z-10 text-slate-200">Comprare acqua in bottiglia non è solo antieconomico, è <strong>un lavoro non pagato che infliggi a te stesso</strong>. L'installazione di un sistema premium trasforma una scomoda necessità in un servizio di hotel a 5 stelle direttamente nella tua cucina.</p>
         </div>
     </section>
