--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <section id="prodotti" class="py-16 px-6 max-w-7xl mx-auto border-t">
-        <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">La Nostra Selezione Premium</h2>
+        <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">La nostra selezione premium</h2>
         
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 items-stretch">
             
@@ -288,13 +288,13 @@
                 <button type="submit" class="w-full bg-cyan-500 text-white py-4 rounded-xl font-bold text-lg hover:bg-cyan-600 transition shadow-lg transform hover:-translate-y-1">
                     RICHIEDI IL TUO PREVENTIVO GRATUITO
                 </button>
-                <p class="text-xs text-center text-slate-400 mt-4">I tuoi dati sono al sicuro. Nessuno spam, solo acqua pura.</p>
+                <p class="text-xs text-center text-slate-400 mt-4">I tuoi dati sono al sicuro.</p>
             </form>
         </div>
     </section>
 
     <footer class="py-10 text-center text-slate-400 text-sm bg-slate-900">
-        <p>© 2026 - Green Water Italia | Soluzioni di Microfiltrazione Premium</p>
+        <p>© 2026 - Green Water Italia | Soluzioni di microfiltrazione premium</p>
     </footer>
 
     <div id="cookie-banner" class="fixed bottom-0 w-full md:bottom-6 md:right-6 md:w-[400px] bg-white border border-slate-200 shadow-2xl z-[100] md:rounded-2xl p-6 transition-all duration-300" style="display: none;">
