--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p class="text-lg text-slate-600 mb-8 max-w-3xl mx-auto">
             Tecnologia Made in Italy certificata. Soluzioni di design per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
         </p>
-        <a href="#form" class="bg-slate-800 text-white px-10 py-4 rounded-xl font-bold shadow-2xl hover:bg-slate-700 transition inline-block">Configura il tuo impianto</a>
+        <a href="#form" class="bg-slate-800 text-white px-10 py-4 rounded-xl font-bold shadow-2xl hover:bg-slate-700 transition inline-block">Richiedi Analisi</a>
     </header>
 
     <section id="vantaggi" class="py-16 px-6 max-w-5xl mx-auto text-slate-700">
