--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#vantaggi" class="hover:text-cyan-500 transition">Vantaggi</a>
             <a href="#prodotti" class="hover:text-cyan-500 transition">Prodotti</a>
             <a href="#faq" class="hover:text-cyan-500 transition">FAQ</a>
-            <a href="#form" class="bg-cyan-500 text-white px-6 py-2 rounded-full font-bold hover:bg-cyan-600 transition shadow-md">Richiedi Analisi</a>
+            <a href="#form" class="bg-cyan-500 text-white px-6 py-2 rounded-full font-bold hover:bg-cyan-600 transition shadow-md">Richiedi informazioni</a>
         </div>
 
         <div class="md:hidden flex items-center">
@@ -39,7 +39,7 @@
         <a href="#vantaggi" class="hover:text-cyan-500 transition text-lg mobile-link">Vantaggi</a>
         <a href="#prodotti" class="hover:text-cyan-500 transition text-lg mobile-link">Prodotti</a>
         <a href="#faq" class="hover:text-cyan-500 transition text-lg mobile-link">FAQ</a>
-        <a href="#form" class="bg-cyan-500 text-white px-8 py-3 rounded-full font-bold hover:bg-cyan-600 transition shadow-md mobile-link">Richiedi Analisi</a>
+        <a href="#form" class="bg-cyan-500 text-white px-8 py-3 rounded-full font-bold hover:bg-cyan-600 transition shadow-md mobile-link">Richiedi informazioni</a>
     </div>
 
     <header class="pt-32 pb-12 px-6 text-center bg-gradient-to-b from-white to-cyan-50">
@@ -52,7 +52,7 @@
         <p class="text-lg text-slate-600 mb-8 max-w-3xl mx-auto">
             Tecnologia Made in Italy certificata. Soluzioni di design per la casa e sistemi ad altissime prestazioni per uffici e settore Ho.Re.Ca.
         </p>
-        <a href="#form" class="bg-slate-800 text-white px-10 py-4 rounded-xl font-bold shadow-2xl hover:bg-slate-700 transition inline-block">Richiedi Analisi</a>
+        <a href="#form" class="bg-slate-800 text-white px-10 py-4 rounded-xl font-bold shadow-2xl hover:bg-slate-700 transition inline-block">Richiedi informazioni</a>
     </header>
 
     <section id="vantaggi" class="py-16 px-6 max-w-5xl mx-auto text-slate-700">
@@ -271,8 +271,8 @@
     </section>
     <section id="form" class="py-20 bg-slate-800 px-6">
         <div class="max-w-xl mx-auto bg-white p-8 md:p-12 rounded-3xl shadow-2xl">
-            <h2 class="text-3xl font-bold text-center text-slate-800">Configura il tuo sistema</h2>
-            <p class="text-center text-slate-500 mb-8">Richiedi un'analisi gratuita e scopri l'impianto perfetto per le tue esigenze (casa, ufficio o locale).</p>
+            <h2 class="text-3xl font-bold text-center text-slate-800">Richiedi informazioni</h2>
+            <p class="text-center text-slate-500 mb-8">Richiedi informazioni e scopri l'impianto perfetto per le tue esigenze (casa, ufficio o locale).</p>
             <form action="https://formspree.io/f/mojnkvgl" method="POST" class="space-y-5">
                 <input type="text" name="Nome" placeholder="Nome e Cognome / Azienda" class="w-full p-4 bg-slate-50 border border-slate-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-cyan-500" required>
                 <input type="email" name="Email" placeholder="Indirizzo Email" class="w-full p-4 bg-slate-50 border border-slate-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-cyan-500" required>
