--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
                 <h3 class="font-bold text-lg text-slate-800 mb-2">L'acqua filtrata è povera di sali minerali?</h3>
                 <p class="text-slate-600">Assolutamente no. I nostri sistemi ad osmosi inversa includono un modulo di miscelazione che permette di regolare il residuo fisso, mantenendo i sali minerali essenziali e restituendo un'acqua leggera e bilanciata al palato.</p>
             </div>
+            <div class="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
+                <h3 class="font-bold text-lg text-slate-800 mb-2">L'acqua del rubinetto è già potabile, perché dovrei installare un sistema di filtrazione?</h3>
+                <p class="text-slate-600">L'acqua dell'acquedotto è controllata alla fonte, ma durante il tragitto nelle tubature cittadine e condominiali può raccogliere sedimenti, ruggine, metalli pesanti e microplastiche. Inoltre, il cloro aggiunto per la disinfezione ne altera spesso il gusto e l'odore. I nostri sistemi eliminano queste impurità, restituendoti un'acqua pura e dal sapore eccellente.</p>
+            </div>
         </div>
     </section>
     <section id="form" class="py-20 bg-slate-800 px-6">
