--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
     <details class="faq-water-item">
         <summary>5. Quanto costa la manutenzione dell'impianto?</summary>
-        <p>La manutenzione è minima e consiste generalmente nella sostituzione dei filtri una volta all'anno (o in base al consumo). Il sistema ti avviserà automaticamente con un segnale sonoro o visivo quando è il momento di intervenire, garantendo sempre la massima igiene.</p>
+        <p>La manutenzione è minima (circa €150) e consiste generalmente nella sostituzione dei filtri una volta all'anno (o in base al consumo). Il sistema ti avviserà automaticamente con un segnale sonoro o visivo quando è il momento di intervenire, garantendo sempre la massima igiene.</p>
     </details>
 
     <details class="faq-water-item">
@@ -334,6 +334,20 @@
         <p>L'installazione è rapida e non invasiva. Possiamo utilizzare un piccolo rubinetto aggiuntivo dedicato oppure sostituire il tuo attuale rubinetto con uno a "3 o 5 vie" (miscelatore standard + vie per l'acqua filtrata), mantenendo intatto il tuo piano cucina.</p>
     </details>
 
+    <details class="faq-water-item">
+        <summary>8. L'acqua filtrata è povera di sali minerali?</summary>
+        <p>Assolutamente no. I nostri sistemi ad osmosi inversa includono un modulo di miscelazione che permette di regolare il residuo fisso, mantenendo i sali minerali essenziali e restituendo un'acqua leggera e bilanciata al palato.</p>
+    </details>
+
+    <details class="faq-water-item">
+        <summary>9. Come avviene l'installazione?</summary>
+        <p>I nostri tecnici specializzati si occupano di tutto. L'installazione richiede meno di due ore e non prevede opere murarie. Il sistema viene integrato in modo invisibile, tipicamente sotto il lavello o sullo zoccolino.</p>
+    </details>
+
+    <details class="faq-water-item">
+        <summary>10. Ogni quanto va fatta la manutenzione?</summary>
+        <p>Per garantire la massima purezza dell'acqua e l'efficienza dei macchinari, raccomandiamo un intervento di sanificazione e cambio filtri una volta all'anno. Ce ne occupiamo noi contattandoti quando è il momento.</p>
+    </details>
 </div>
     
     <section id="form" class="py-20 bg-slate-800 px-6">
