--- a/index.html
+++ b/index.html
@@ -297,6 +297,8 @@
     }
 </style>
 
+    <section id="faq" class="py-16 px-6 max-w-4xl mx-auto border-t">
+        <h2 class="text-3xl font-bold text-center mb-10 text-slate-800">Domande Frequenti (FAQ)</h2>
 <div class="faq-water-container">
 
     <details class="faq-water-item">
@@ -349,6 +351,7 @@
         <p>Per garantire la massima purezza dell'acqua e l'efficienza dei macchinari, raccomandiamo un intervento di sanificazione e cambio filtri una volta all'anno. Ce ne occupiamo noi contattandoti quando è il momento.</p>
     </details>
 </div>
+</section>
     
     <section id="form" class="py-20 bg-slate-800 px-6">
         <div class="max-w-xl mx-auto bg-white p-8 md:p-12 rounded-3xl shadow-2xl">
