--- a/index.html
+++ b/index.html
@@ -313,42 +313,32 @@
 
     <details class="faq-water-item">
         <summary>3. Gli impianti occupano molto spazio in cucina?</summary>
-        <p>Assolutamente no. I nostri modelli, come Osmoslim, sono progettati per il design moderno: hanno uno spessore di soli 6,7 cm e possono essere installati sotto il lavello o persino dietro lo zoccolo della cucina, risultando completamente invisibili.</p>
+        <p>Assolutamente no. I nostri modelli, come Osmoslim, sono progettati per il design moderno: hanno uno spessore di soli 6,7 cm e possono essere installati sotto il lavello o persino dietro lo zoccolo della cucina.</p>
     </details>
 
     <details class="faq-water-item">
         <summary>4. Posso avere anche l'acqua frizzante direttamente dal rubinetto?</summary>
-        <p>Sì! Grazie ai nostri frigogasatori (come la linea Bollicina), puoi scegliere tra acqua naturale a temperatura ambiente, naturale fredda o frizzante fredda, regolando anche il livello di gassatura in base ai tuoi gusti.</p>
+        <p>Sì! Grazie ai nostri frigogasatori (come la linea Bollicina), puoi scegliere tra acqua naturale a temperatura ambiente, naturale fredda o frizzante fredda, regolando anche il livello di gasatura in base ai tuoi gusti.</p>
     </details>
 
     <details class="faq-water-item">
-        <summary>5. Quanto costa la manutenzione dell'impianto?</summary>
+        <summary>5. Quanto costa e ogni quanto va fatta la manutenzione dell'impianto?</summary>
         <p>La manutenzione è minima (circa €150) e consiste generalmente nella sostituzione dei filtri una volta all'anno (o in base al consumo). Il sistema ti avviserà automaticamente con un segnale sonoro o visivo quando è il momento di intervenire, garantendo sempre la massima igiene.</p>
     </details>
 
     <details class="faq-water-item">
         <summary>6. L'acqua filtrata è sicura per neonati e bambini?</summary>
-        <p>Sì, è l'ideale. I nostri sistemi rimuovono sostanze indesiderate garantendo un'acqua leggera e pura, perfetta per la preparazione di pappe e biberon, evitando di sovraccaricare i reni dei più piccoli con eccessivi sali minerali.</p>
+        <p>Sì, è l'ideale. I nostri sistemi rimuovono sostanze indesiderate garantendo un'acqua leggera e pura, perfetta per la preparazione di pappe e biberon.</p>
     </details>
 
     <details class="faq-water-item">
         <summary>7. L'installazione richiede lavori invasivi o fori nel marmo?</summary>
-        <p>L'installazione è rapida e non invasiva. Possiamo utilizzare un piccolo rubinetto aggiuntivo dedicato oppure sostituire il tuo attuale rubinetto con uno a "3 o 5 vie" (miscelatore standard + vie per l'acqua filtrata), mantenendo intatto il tuo piano cucina.</p>
+        <p>L'installazione è rapida, non invasiva, richiede meno di mezza giornata di lavoro e non prevede opere murarie. Il sistema viene integrato tipicamente sotto il lavello o sullo zoccolino. Possiamo utilizzare un piccolo rubinetto aggiuntivo dedicato oppure sostituire il tuo attuale rubinetto con uno a "3 o 5 vie" (miscelatore standard + vie per l'acqua filtrata), mantenendo intatto il tuo piano cucina.</p>
     </details>
 
     <details class="faq-water-item">
         <summary>8. L'acqua filtrata è povera di sali minerali?</summary>
         <p>Assolutamente no. I nostri sistemi ad osmosi inversa includono un modulo di miscelazione che permette di regolare il residuo fisso, mantenendo i sali minerali essenziali e restituendo un'acqua leggera e bilanciata al palato.</p>
-    </details>
-
-    <details class="faq-water-item">
-        <summary>9. Come avviene l'installazione?</summary>
-        <p>I nostri tecnici specializzati si occupano di tutto. L'installazione richiede meno di due ore e non prevede opere murarie. Il sistema viene integrato in modo invisibile, tipicamente sotto il lavello o sullo zoccolino.</p>
-    </details>
-
-    <details class="faq-water-item">
-        <summary>10. Ogni quanto va fatta la manutenzione?</summary>
-        <p>Per garantire la massima purezza dell'acqua e l'efficienza dei macchinari, raccomandiamo un intervento di sanificazione e cambio filtri una volta all'anno. Ce ne occupiamo noi contattandoti quando è il momento.</p>
     </details>
 </div>
 </section>
