--- a/index.html
+++ b/index.html
@@ -142,10 +142,14 @@
                 <h3 class="text-xl font-bold">OSMOSYSTEM 150</h3>
                 <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Prestazioni Top in 10,5 cm</p>
                 <ul class="text-sm space-y-2 text-slate-600 flex-grow">
-                    <li>• Produzione: 150 Lt/h (2,5 L/min)</li>
+                    <li>• Produzione acqua: 150 Lt/h (2,5 L/min)</li>
                     <li>• Versioni: Standard, Alka e GAS</li>
-                    <li>• Scocca in Acciaio Inox e Alluminio</li>
+                    <li>• Scocca in acciaio Inox e alluminio</li>
                     <li>• Sensore antiallagamento e autoflushing</li>
+                    <li>• Display di segnalazione funzionalità e conducibilità</li>
+                    <li>• Soli 10,5 cm di spessore - installazione verticale e orizzontale</li>
+                    <li>• Sistema di filtraggio a cartucce</li>
+                    <li>• Pompa in tecnopolimero per maggior resistenza al calcare</li>
                 </ul>
             </div>
 
@@ -156,9 +160,14 @@
                 <h3 class="text-xl font-bold">OSMOSÌ</h3>
                 <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Sottile: 10,5 cm</p>
                 <ul class="text-sm space-y-2 text-slate-600 flex-grow">
-                    <li>• Produzione: 100 Lt/h (1,6 L/min)</li>
+                    <li>• Produzione acqua: 100 Lt/h (1,6 L/min)</li>
+                    <li>• Scocca in acciaio verniciato</li>
                     <li>• Motore 180W - Pompa rotativa</li>
                     <li>• Vessel FV System brevettato</li>
+                    <li>• Soli 10,5 cm di spessore - installazione verticale/orizzontale</li>
+                    <li>• Pompa rotativa a palette</li>
+                    <li>• Centralina di controllo funzioni antiallagamento</li>
+                    <li>• Avviso sonoro per segnalazione funzionalità</li>
                 </ul>
             </div>
             
