--- a/index.html
+++ b/index.html
@@ -178,9 +178,13 @@
                 <h3 class="text-xl font-bold">BOLLICINA FV</h3>
                 <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Acqua Fredda e Frizzante</p>
                 <ul class="text-sm space-y-2 text-slate-600 flex-grow">
-                    <li>• Osmofrigogasatore Inox</li>
-                    <li>• Produzione osmosi: 100 Lt/h</li>
-                    <li>• Display controllo temperatura</li>
+                    <li>• Scocca in acciaio Inox e antine in alluminio verniciato</li>
+                    <li>• Produzione acqua: 100 Lt/h (1,6 L/min)</li>
+                    <li>• Display controllo funzioni e temperatura</li>
+                    <li>• Vaschetta raccogli condensa e antiallagamento</li>
+                    <li>• Sistema di filtraggio a cartucce</li>
+                    <li>• Pompa in tecnopolimero per maggior resistenza al calcare</li>
+                    <li>• Condensazione ad acqua</li>
                 </ul>
             </div>
             
@@ -191,9 +195,14 @@
                 <h3 class="text-xl font-bold">BOLLAQUICK</h3>
                 <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Efficienza Sottobanco</p>
                 <ul class="text-sm space-y-2 text-slate-600 flex-grow">
-                    <li>• Produzione nominale: 90 Lt/h</li>
+                    <li>• Produzione acqua: 90 Lt/h (1,5 L/min)</li>
+                    <li>• Scocca in acciaio verniciato e struttura in acciaio Inox</li>
                     <li>• Pompa booster 220V High Perf.</li>
                     <li>• Condensazione ad acqua</li>
+                    <li>• Vaschetta raccogli condensa e antiallagamento</li>
+                    <li>• Avviso sonoro per segnalazione funzionalità</li>
+                    <li>• Pompa booster 220 V ad alte prestazioni</li>
+                    <li>• Centralina di controllo funzioni antiallagamento</li>                 
                 </ul>
             </div>
             
