--- a/index.html
+++ b/index.html
@@ -239,9 +239,18 @@
                 <h3 class="text-xl font-bold">FRIGHOST</h3>
                 <p class="text-cyan-600 text-xs font-bold uppercase mb-4">Invisibile sottozoccolo</p>
                 <ul class="text-sm space-y-2 text-slate-600 flex-grow">
-                    <li>• Altezza: soli 10,5 cm</li>
-                    <li>• Carbonatore Inox da 1 litro</li>
+                    <li>• Altezza: soli 10,5 cm di altezza per installazione sottozoccolo</li>
+                    <li>• Esclusivo carbonatore Inox 304 da 1 litro</li>
                     <li>• Fredda e frizzante nascosta</li>
+                    <li>• Scocca in acciaio Inox</li>
+                    <li>• Display LCD controllo funzioni e temperatura</li>
+                    <li>• Esclusivo compressore ermetico 24 V</li>
+                    <li>• Sistema anti-condensa ed antiallagamento integrato</li>
+                    <li>• Produzione acqua: 2 L/min</li>
+                    <li>• Sistema di filtraggio a cartucce</li>
+                    <li>• Esclusivo vessel per membrana in acciaio Inox 304</li>
+                    <li>• Sistema di filtraggio a cartucce</li>
+                    <li>• Pompa in tecnopolimero per maggior resistenza al calcare</li>
                 </ul>
             </div>
             
