--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
                     <li>• Spessore record: 6,7 cm</li>
                     <li>• 2 Membrane TW30 2012</li>
                     <li>• Installazione in ogni angolo</li>
+                    <li>• Scocca in acciaio verniciato</li>
+                    <li>• Produzione nominale: 100 Lt/h</li>
+                    <li>• Alimentazione 220 V 50/60 Hz</li>
+                    <li>• Pompe booster a membrana 24V</li>
+                    <li>• Filtro CTO a carbone alimentare in linea 12” x 2,5"</li>
+                    <li>• Assorbimento max: 90W</li>
+                    <li>• Mix regolatore di salinità integrato</li>
                 </ul>
             </div>
             
