--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@
                     <li>• Erogazione in continuo: 6 Litri</li>
                     <li>• Temperatura acqua fredda: tra 5° e 12°</li>
                     <li>• Pompa carbonazione booster 220V</li>
+                    <li>• Alimentazione/potenza assorbita 230V - 50 Hz/330W</li>
+                    <li>• Dimensioni mm 360(L)x567(P)x1404(H)</li>
+                    <li>• Tecnologia di raffreddamento DUAL COLD: Aria; Acqua; Condensazione combinata Aria/Acqua</li>
+                    <li>• Gas refrigerante R290</li>
                 </ul>
             </div>
 
