--- a/index.html
+++ b/index.html
@@ -448,9 +448,12 @@
             </div>
         </div>
         
-        <!-- Copyright -->
-        <div class="border-t border-slate-800 pt-8 pb-4">
-            <p class="text-center">© 2026 - Green Water Italia | Soluzioni di microfiltrazione premium</p>
+        <!-- Copyright e Logo RoMimatic -->
+        <div class="border-t border-slate-800 pt-8 pb-4 px-6">
+            <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-center gap-4">
+                <img src="logo-s.png" alt="Logo RoMimatic" class="h-10 w-auto object-contain">
+                <p class="text-center">© 2026 - RoMimatic - P.Iva: 04456450966 | Soluzioni di microfiltrazione premium</p>
+            </div>
         </div>
     </footer>
 
