--- a/index.html
+++ b/index.html
@@ -215,7 +215,13 @@
                 <ul class="text-sm space-y-2 text-slate-600 flex-grow">
                     <li>• Raffreddamento: fino a 80 L/h</li>
                     <li>• Tecnologia Dual Cold (Igiene)</li>
-                    <li>• Soprabanco o a Colonna</li>
+                    <li>• Erogazione in continuo: 6 Litri</li>
+                    <li>• Temperatura acqua fredda: tra 5° e 12°</li>
+                    <li>• Gas refrigerante R290</li>
+                    <li>• Tecnologia di raffreddamento DUAL COLD: Aria; Acqua; Condensazione combinata Aria/Acqua</li>
+                    <li>• Pompa carbonazione booster 220V</li>
+                    <li>• Dimensioni mm 360(L)x567(P)x1404(H)</li>
+                    <li>• Alimentazione/potenza assorbita 230V - 50 Hz/330W</li>                                      
                 </ul>
             </div>
 
